--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ img.crystalImage {
 }
 
 #row1 {
-	background-image: url('../images/bknd.png.png');
+	background-image: url('../images/bknd.png');
 }
 
 #row2 {
